# ncs-games

./: .gitignore  README.adoc  README.md  zephyr-env.sh
cdc_acm/: prj.conf
dumb_http_server/: prj.conf
zperf/: .gitignore  CMakeLists.txt  Kconfig  Makefile  README.adoc  overlay-netusb.conf  overlay-usbd_next.conf  overlay-usbd_next_ecm.conf  prj.conf  usbd_next_ecm.overlay  usbd_next_ncm.overlay
zperf/boards/: nrf52840dk_nrf52840.conf  nrf52840dk_nrf52840.overlay
zperf/src/: main.c
zperf/src/netusb/: function_ecm.c  function_ncm.c  function_ncm_simple.c  ncm.h  netusb.h
